--- a/src/app/categories/categories.page.html
+++ b/src/app/categories/categories.page.html
@@ -14,7 +14,7 @@
 
   </div>
 
-  <div class="card">
+  <div class="card animated bounceInUp">
       <ion-grid>
         <ion-row class="categorie">
           <ion-col size="6" *ngFor="let item of categories">
