--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,41 +1,59 @@
-ion-header{
-  ion-toolbar{
-    --background: #204d57;
-    box-shadow: none;
-  }
-  position: absolute,
+// ion-header {
+//   ion-toolbar {
+//     --ion-background-color: transparent;
+//   --ion-background-color: linear-gradient(#1D976C, #93F9B9) ;
 
+//     --border-color: transparent;
+//   }
+// }
+
+
+.custom-modal-size {
+  --width: 80%;
+  --height: 60%;
+  background-color: #fff; /* Arrière-plan blanc */
+  border-radius: 10px; /* Bords arrondis */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombre légère */
+}
+.modal-content {
+  padding: 20px;
+  line-height: 1.6;
+  color: #333; /* Couleur du texte */
+}
+.custom-modal-content {
+  background-color: #fff; /* Couleur de fond */
+  color: #333; /* Couleur du texte */
+  font-size: 16px; /* Taille de la police */
+  /* Ajoutez d'autres styles selon vos besoins */
 }
 
-ion-content{
-  //margin-top: 0;
-  --background: #204d57;
+ion-header {
+  ion-toolbar {
+    --background: linear-gradient( #93F9B9);
+    box-shadow: none;
+  }
+  position: absolute; /* Ajout du point-virgule ici */
+}
+
+// .background{
+//   --background: url('../../assets/img/ok.png') 0 0/100% 100% no-repeat;
+// }
+
+ion-content {
+  --ion-background-color: linear-gradient(#1D976C, #93F9B9) ;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  //--ion-background-color: transparent,
-
-  // p{
-  //   margin-top: 40vh;
-  // }
-
-  // ion-button{
-  //   width: 50%;
-  //   //margin-left: 15%;
-  //   border-radius: 60%;
-  //   align-items: center;
-  // }
+  
   .buttons {
-
     position: absolute;
     bottom: 3rem;
     width: 100%;
   }
 
   .playButton {
-
     height: 4rem;
     --border-radius: 500px;
     width: fit-content;
@@ -45,7 +63,6 @@ ion-content{
   }
 
   .helpButton {
-
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -58,5 +75,24 @@ ion-content{
     --border-radius: 10rem !important;
     --padding-end: 1.25rem;
   }
+}
 
+
+
+
+
+ion-modal {
+  --height: 50%;
+  --border-radius: 16px;
+  --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+
+ion-modal::part(backdrop) {
+  background: rgba(209, 213, 219);
+  opacity: 1;
+}
+
+ion-modal ion-toolbar {
+  --background: rgb(14 116 144);
+  --color: white;
 }
