--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -20,20 +20,27 @@
     </ion-card-content>
   </ion-card> -->
 
+
+  <!-- <div class="quiz-question">
+    <h2>{{ PoseQuestion }}</h2>
+  </div>
+
+  <div class="quiz-answer" (click)="onAnswerClick(item)" [class.selected]="item.isSelected">
+    <span class="quiz-answer-text">{{ item.choix }}</span>
+  </div> -->
+<br> <br> <br> <br>
+
   <ion-card>
     <ion-card-header>
-      <!-- Question {{ currentQuestion + 1 }} -->
+      <div class="quiz-question">{{ PoseQuestion }}</div>
     </ion-card-header>
     <ion-card-content>
-      {{PoseQuestion}}
-      <ion-list>
-        <ion-item *ngFor="let item of reponses" (click)="onReponseClick(item)">
-          {{item.choix}}
-        </ion-item>
-      </ion-list>
+      <div class="quiz-answer" *ngFor="let item of reponses" (click)="onReponseClick(item)">
+        <span class="quiz-answer-text">{{ item.choix }}</span>
+      </div>
     </ion-card-content>
   </ion-card>
-
+  
 
 
 
