ajout des fonctionalités

--- a/src/app/nombre-jouers/nombre-jouers.page.html
+++ b/src/app/nombre-jouers/nombre-jouers.page.html
@@ -8,5 +8,6 @@
 
     <ion-button (click)="OneJoeur()"> Un joueur</ion-button>
     <ion-button (click)="Multi_joueurs()"> Plusieurs joueurs</ion-button>
+    <ion-button (click)="Ajout_question()"> Propose une question</ion-button>
 
 </ion-content>
