--- a/src/app/nombre-jouers/nombre-jouers.page.html
+++ b/src/app/nombre-jouers/nombre-jouers.page.html
@@ -6,8 +6,8 @@
 
 <ion-content [fullscreen]="true">
 
-    <ion-button (click)="OneJoeur()"> Un joueur</ion-button>
-    <ion-button (click)="Multi_joueurs()"> Plusieurs joueurs</ion-button>
-    <ion-button (click)="Ajout_question()"> Propose une question</ion-button>
+    <ion-button (click)="OneJoeur()"> {{"Quiz_nbre_joueur1" | translate}}</ion-button>
+    <ion-button (click)="Multi_joueurs()"> {{"Quiz_nbre_joueurP" | translate}}</ion-button>
+    <ion-button (click)="Ajout_question()">{{"Quiz_propose_question" | translate}}</ion-button>
 
 </ion-content>
