--- a/src/app/propose-question/propose-question.page.html
+++ b/src/app/propose-question/propose-question.page.html
@@ -5,9 +5,54 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">propose-question</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-modal [isOpen]="is_open" didDismiss="handleClose($event)">
+
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>hello</ion-title>
+          <ion-buttons slot="end" >
+            <ion-button (click)="close()">
+              <ion-icon slot="icon-only" name="close"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+
+      <ion-content class="ion-padding">
+        <ion-item class="ion-margin-bottom">
+          <ion-input type="text" label="nom_etudiant:" fill="outline" labelPlacement="stacked" [(ngModel)]="question.nom">
+          </ion-input>
+        </ion-item>
+        <ion-item class="ion-margin-bottom">
+          <ion-input type="date" label="Birtday" fill="outline" labelPlacement="stacked" [(ngModel)]="question.birthdate">
+          </ion-input>
+        </ion-item>
+
+
+        <ion-item class="ion-margin-bottom">
+          <ion-select fill="outline" label="Filiere" labelPlacement="stacked" placeholder="choisir une filiere" [(ngModel)]="question.filiere">
+            <ion-select-option value="ISI">ISI</ion-select-option>
+            <ion-select-option value="SRT">SRT</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item class="ion-margin-bottom">
+          <ion-select fill="outline" label="Niveau" labelPlacement="stacked" placeholder="choisir une filiere" [(ngModel)]="question.niveau">
+            <ion-select-option value="3">3</ion-select-option>
+            <ion-select-option value="4">4</ion-select-option>
+            <ion-select-option value="5">5</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <div class="ion-padding">
+          <ion-button (click)="save()" expand="block">
+            Enregistrer
+          </ion-button>
+        </div>
+
+
+      </ion-content>
+    </ng-template>
+
+  </ion-modal>
 </ion-content>
