--- a/src/app/niveaux/niveaux.page.html
+++ b/src/app/niveaux/niveaux.page.html
@@ -1,16 +1,16 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>niveaux</ion-title>
   </ion-toolbar>
-</ion-header>
-
+</ion-header> -->
+<br> <br> <br> <br> <br> <br> <br> <br>
 <ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item *ngFor="let item of niveaux" (click)="questionCatNiv(item)">
-      <ion-button expand="full" shape="round" class="full-width-button" >
+  <div class="button-container">
+    <div *ngFor="let item of niveaux"  (click)="questionCatNiv(item)">
+      <ion-button expand="full" shape="round" class="custom-button" >
          {{ item.Libelle_niveau }}   
       </ion-button>
-    </ion-item>
-  </ion-list>
+    </div>
+  </div>
 </ion-content>  
 
