--- a/src/app/quiz/quiz.page.scss
+++ b/src/app/quiz/quiz.page.scss
@@ -1,6 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+ion-content {
+  --ion-background-color: linear-gradient(#1D976C, #93F9B9) ;
+
+  }
+
+
 ion-card {
   margin: 20px 0;
+  --ion-background-color:#1D976C;
+
+
 }
+.blanc{
+  color: #f8f8f8;
+  font-family: 'Chewy', cursive;
+
+
+}
+.catniv{
+  --ion-background-color:#1D976C;
+  text-align: center;
+  width: 100%;
+  height: 50 px;
+  display:inline-block;
+  margin: auto;
+}
+ion-button.catniv {
+  --background: linear-gradient(#093028, #237A57); /* Vert pour le bouton catégorie/niveau */
+  // --border-radius: 20px; /* Bords arrondis */
+  --ion-background-color:linear-gradient(#348F50, #56B4D3) ;
+
+  font-weight: bold;
+}
+
+.encours {
+  margin-left: 15%;
+  display: flex;
+  align-items: center; /* Alignement vertical au centre des éléments */
+  text-align: center;
+
+
+}
+
 
 .Categorie {
   .image-container {
@@ -34,14 +78,23 @@ ion-card {
   }
 }
 
+span{
+  --background: #333;  // Fond gris foncé pour la barre de recherche
+  --color: white;      // Texte blanc
+}
+
 
 .quiz-question {
   font-size: 18px;
-  font-weight: bold;
-  color: #333;
+  // font-weight: bold;
+  color: #f8f8f8;
   text-align: center;
   padding: 15px;
   animation: float 5s ease-in-out infinite;
+  font-family: 'Chewy', cursive;
+  // font-family: 'Bangers', cursive;
+
+
 }
 
 @keyframes float {
@@ -50,13 +103,18 @@ ion-card {
 }
 
 .quiz-answer {
-  background-color: #f8f8f8;
+  background-color: #FFE000;
+  // --background: #93F9B9;
+  --color:#fff;
+
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 15px;
   margin: 10px 0;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  text-align: center;
+
 }
 
 .quiz-answer:hover {
@@ -70,7 +128,10 @@ ion-card {
 
 .quiz-answer-text {
   font-size: 16px;
-  color: #333;
+  color: #000;
+  text-align: center;
+  font-family: 'Chewy', cursive;
+
 }
 
 .quiz-answer.selected .quiz-answer-text {
