--- a/src/app/result/result.page.html
+++ b/src/app/result/result.page.html
@@ -1,10 +1,10 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Résultats</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content class="ion-padding">
+<!-- <ion-content class="ion-padding">
   <ion-card>
     <ion-card-content>
       <h2>Votre score :</h2>
@@ -17,4 +17,28 @@
   </ion-card>
 
 <ion-button (click)="reload()">recommener</ion-button>
+</ion-content> -->
+
+<ion-content>
+  <div class="score-container">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title class="blanc">Score Final</ion-card-title>
+      </ion-card-header>
+      <ion-card-content class="button-container">
+        <div *ngFor="let item of data.jF" class="player-score">
+        <p class="blanc">Félicitations ! Vous avez terminé le jeu.</p>
+          <h1 class="bla">{{ item.nom }}</h1>
+          <h2 class="final-score">{{ item.points }} / {{ data.taille }}</h2>
+        </div>
+        <div class="score-details">
+          <ion-badge color="success">Réponses Correctes: 25</ion-badge><br>
+          <ion-badge color="warning">Réponses Incorrectes: 5</ion-badge>
+        </div>
+        <ion-button expand="full" shape="round" class="custom-button" (click)="reload()">Recommencer</ion-button>
+        <ion-button expand="full" shape="round" class="custom-button" href="/home">Retourner à l'Accueil</ion-button>
+        <ion-button expand="full" shape="round" class="custom-button">Partager</ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
